add some images

--- a/project2.html
+++ b/project2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+t<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -314,10 +314,10 @@
              <!-- 1.1: COMPETITIVE ANALYSIS -->
              <section class ="competitors">
               <h3>COMPETITIVE ANALYSIS</h3>
-               <div class="analysis"> <!-- to use as separate grid later -->
-                 <article>       <!-- GOOGLE DRIVE src="/imagesUpdated/iconsLogos/googleDriveLogo.PNG" alt="Google Drive logo" -->
+               <div class="analysis">
+                 <article>
                    <div class="logo-container">
-                     <img src="imagesUpdated/iconsLogos/GDrive.png" alt="Google Drive logo">
+                     <img src="imagesUpdated/iconsLogos/pawpular.png" alt="StrayGlobe logo">
                    </div>
                     <p>Pawpular is a social media platform for pet owners to share photos of their pets such as
                       dogs, cats, reptiles, birds, aquatic animals, mammals, etc.
@@ -326,9 +326,9 @@
                       but none in other categories. Moreover, its content needs more organizations by
                       eliminating unpopular features and services that have not been out yet.</p>
                  </article>
-                 <article>       <!-- DROPBOX -->
+                 <article>
                    <div class="logo-container">
-                     <img src="imagesUpdated/iconsLogos/dropbox.png" alt="Google Drive logo">
+                     <img src="imagesUpdated/iconsLogos/strayglobe.png" alt="StrayGlobe logo">
                    </div>
                     <p>StrayGlobe is a one-of-its-kind mobile app that let user report stray animals.
                       The app was developed in India and their map works worldwide.
@@ -338,9 +338,9 @@
                       extremely low.
                       Thus, it is a very ineffective application.</p>
                  </article>
-                 <article>       <!-- BOX -->
+                 <article>
                    <div class="logo-container">
-                     <img src="imagesUpdated/iconsLogos/boxLogo.png" alt="Google Drive logo">
+                     <img src="imagesUpdated/iconsLogos/aspca.png" alt="ASPCA logo">
                    </div>
                     <p>ASPCA is one of the few animal welfare organizations that developed a mobile app.
                       ASPCA’s goal is to inform pet owners how to prepare for disasters.
@@ -368,7 +368,7 @@
               <section class="col"> <!-- to wrap aound 3 col personas -->
                   <!-- PERSONA 1 -->
                   <article class="persona1">
-                    <div class="avatar"><img class="avatar1" src="imagesUpdated/karaM.jpg" alt="Kara M"></div>
+                    <div class="avatar"><img class="avatar1" src="imagesUpdated/TNRProject/kara.jpg" alt="Kara M"></div>
                      <h4 class="name">Kara M.</h4>
                       <p class="quote">“I prefer the old-school flash drive.”</p>
                        <ul>
@@ -380,7 +380,7 @@
                   </article>
                   <!-- PERSONA 2 -->
                   <article class="persona2">
-                    <div class="avatar"><img class="avatar2" src="imagesUpdated/hannahA.jpg" alt="Hannah A"></div>
+                    <div class="avatar"><img class="avatar2" src="imagesUpdated/TNRProject/sharon.jpg" alt="Hannah A"></div>
                      <h4 class="name">Hannah A.</h4>
                       <p class="quote">“I only save pictures so Google Photo is my only go-to.”</p>
                        <ul>
@@ -392,7 +392,7 @@
                   </article>
                   <!-- PERSONA 3 -->
                   <article class="persona3">
-                    <div class="avatar"><img class="avatar3" src="imagesUpdated/seanM.jpg" alt="Sean"></div>
+                    <div class="avatar"><img class="avatar3" src="imagesUpdated/TNRProject/kevin.jpg" alt="Sean"></div>
                       <h4 class="name">Sean M.</h4>
                        <p class="quote">“I can’t believe no one save weblinks.”</p>
                         <ul>
