test feature screens

--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
         <li class="description-content2">
           <h2>TNRHumane</h2>
           <p>A mobile application that partner with animal welfare organizations and volunteers to help
-            humanely reduce homeless cats overpopulation through Trap, Neuter, Return program 
+            humanely reduce homeless cats overpopulation through Trap, Neuter, Return program
             and find homes for friendly strays.
             </p>
             <a class="button" href="project2.html">VIEW CASE STUDY</a>
         </li>
         <li class="miniScreen"><img src="imagesUpdated/mobileScr.png" alt="virtbox screenshot"></li>
-        <li class="bigScreen"><img src="imagesUpdated/virtbox.png" alt="virtBox screenshot"></li>
+        <li class="bigScreen"><img src="imagesUpdated/TNRProject/TNRHumane.png" alt="virtBox screenshot"></li>
       </section>
       <!-- PROJECT 1 -->
       <section class="project1">
