edit project 2 img and color

--- a/index.html
+++ b/index.html
@@ -69,16 +69,16 @@
     <!-- PROJECT 2 -->
     <section id="projects" class="project2">
       <ul class="grid3">
+        <li class="miniScreen"><img src="imagesUpdated/TNRProject/TNRHumane.png" alt="TNRHumane screenshot"></li>
         <li class="description-content2">
           <h2>TNRHumane</h2>
-          <p>A mobile application that partner with animal welfare organizations and volunteers to help
-            humanely reduce homeless cats overpopulation through Trap, Neuter, Return program
-            and find homes for friendly strays.
+          <p>A mobile application that partner with animal organizations and volunteers to help
+            humanely reduce homeless cats overpopulation through <em class="abbreviation">Trap, Neuter, Return</em> program
+            by allowing users to report stray cats sighting.
             </p>
             <a class="button" href="project2.html">VIEW CASE STUDY</a>
         </li>
-        <li class="miniScreen"><img src="imagesUpdated/mobileScr.png" alt="virtbox screenshot"></li>
-        <li class="bigScreen"><img src="imagesUpdated/TNRProject/TNRHumane.png" alt="virtBox screenshot"></li>
+        <li class="bigScreen"><img src="imagesUpdated/TNRProject/TNRHumane.png" alt="TNRHumane screenshot"></li>
       </section>
       <!-- PROJECT 1 -->
       <section class="project1">
