--- a/project2.html
+++ b/project2.html
@@ -1,4 +1,4 @@
-t<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -48,14 +48,14 @@ t<!DOCTYPE html>
       <!-- hero unit -->
       <section class="hero-background">
           <ul class="grid1">
-            <li class="left-content"><img src="imagesUpdated/mobileScr.png" alt="virtBox screenshot"></li>
-            <li class="left-contentBig"><img src="imagesUpdated/virtbox.png" alt="virtBox screenshot"></li>
+            <li class="left-content"><img src="imagesUpdated/TNRProject/TNRHumane.png" alt="TNRHumane screenshot"></li>
+            <li class="left-contentBig"><img src="imagesUpdated/TNRProject/TNRHumane.png" alt="TNRHumane screenshot"></li>
             <li class="right-content">
               <div class="summary">
                 <h1><em class="abbreviation">T</em>rap</h1>
                 <h1><em class="abbreviation">N</em>euter/Spay</h1>
                 <h1><em class="abbreviation">R</em>eturn</h1>
-                <h1>With love for homeless cats</h1>
+                <h1>An alternative to euthanasia</h1>
               </div>
                 <a class="button" href="https://invis.io/4TGU1XQJ8UP" target="_blank">VIEW PROTOTYPE</a>
             </li>
@@ -73,8 +73,8 @@ t<!DOCTYPE html>
               and alert volunteers or animal organizations to come and Trap, Neuter, and Return feral cats
               to its environment. The app will also help find homes for abandoned animals,
               provide food/medical care, and act as a humane solution to reduce feral cats overpopulation.
-              Besides helping homeless cats, TNRHumane acts as a social platform for local caretakers
-              and animal advocates to connect.</p>
+              It also acts as a social platform for local caretakers
+              to connect and form a community.</p>
               <div class="rolesTools">
                 <ul class="roles">
                  <li class="title1">Design Roles</li>
