improve wording and changed background color in p2

--- a/project2.html
+++ b/project2.html
@@ -71,9 +71,9 @@
             <h2>What is TNRHumane?</h2>
             <p>TNRHumane is a mobile application that allows users to report homeless cat sighting
               and alert volunteers or animal organizations to come and Trap, Neuter, and Return feral cats
-              to its environment. The app will also help find homes for abandoned animals,
+              to its environment. The app will help find homes for abandoned animals,
               provide food/medical care, and act as a humane solution to reduce feral cats overpopulation.
-              It also acts as a social platform for local caretakers
+              It also serves as a social platform for local caretakers
               to connect and form a community.</p>
               <div class="rolesTools">
                 <ul class="roles">
