edit features content and add 2 imgs

--- a/project2.html
+++ b/project2.html
@@ -100,10 +100,12 @@
            <section class ="overview">
             <h2>OVERVIEW</h2>
             <p>Homeless cats multiply quickly in the wild.
-              A pair of unfixed cat can multiply up to ….. Within a year. By 3 years,
-              there will be a colony of approximately ….. While many often feed them while others
-              see them as a nuisance. Thus, creating problems such as, animosity towards homeless cats and feeders,
-              human-transmitted diseases, Risk of animal abuse, kittens born suffer and die in the wild.
+              A pair of unfixed cat can multiply up to 32 cats within 16 months in an apartment complex alone.
+              While many often feed them, others
+              see them as a nuisance.
+              Thus, creating problems such as, animosity towards homeless cats and feeders,
+              risk of human-transmitted diseases, risk of animal abuse, kittens born suffer
+              and die in the wild.
               In order to ensure animal welcare, the community is facing the following problems:</p>
               </section>
            </div>
@@ -114,16 +116,17 @@
                    <img class="sad" src="imagesUpdated/iconsLogos/frown.svg" alt="sad face">
                  </li>
                  <li class="prob">
-                   <em class="bold-prob">Problem:</em> Unable to keep track of homeless cat population and their welcare
+                   <em class="bold-prob">Problem:</em> Unable to keep track of homeless cat population.
                  </li>
                  <li>
                     <img class="happy" src="imagesUpdated/iconsLogos/smile.svg" alt="happy face">
                  </li>
                  <li class="prob">
-                   <em class="bold-sol">Solution:</em> Allow both those who dislike cats and animal advocate to report homeless cats sighting
+                   <em class="bold-sol">Solution:</em> Allow users to report homeless cats
+                   sighting to keep track of the population and health status.
                  </li>
                </ul>
-               <img class="solscr" src="imagesUpdated/logedInDashboard.png" alt="empty dashboard">
+               <img class="solscr" src="imagesUpdated/TNRProject/map.png" alt="empty dashboard">
 
 
               <!-- problem and solution group 2 for MOBILE & TABLET -->
@@ -133,32 +136,32 @@
                       <img class="sad" src="imagesUpdated/iconsLogos/frown.svg" alt="sad face">
                     </li>
                     <li class="prob">
-                      <em class="bold-prob">Problem:</em> Unable to increase a community to support TNR program
+                      <em class="bold-prob">Problem:</em> Unable to promote TNR program effectively.
                     </li>
                     <li>
                        <img class="happy" src="imagesUpdated/iconsLogos/smile.svg" alt="happy face">
                     </li>
                     <li class="prob">
-                      <em class="bold-sol">Solution:</em> Homeless cats get fixed, returned, and recorded
+                      <em class="bold-sol">Solution:</em> Keep users in-touch with the community.
                     </li>
                  </ul>
-                 <img class="solscr sm" src="imagesUpdated/dashboardLink.png" alt="dashboard link view">
+                 <img class="solscr sm" src="imagesUpdated/TNRProject/socialFeature.png" alt="dashboard link view">
                </section>
 
                <!-- problem and solution group 2 for DESKTOP -->
-            <img class="solscr2 lg" src="imagesUpdated/dashboardLink.png" alt="dashboard link view">
+            <img class="solscr2 lg" src="imagesUpdated/TNRProject/socialFeature.png" alt="dashboard link view">
             <ul class="probsol2 lg">
                <li>
                  <img class="sad" src="imagesUpdated/iconsLogos/frown.svg" alt="sad face">
                </li>
                <li class="prob">
-                 <em class="bold-prob">Problem:</em> Unable to increase a community to support TNR program
+                 <em class="bold-prob">Problem:</em> Unable to promote TNR program effectively.
                </li>
                <li>
                   <img class="happy" src="imagesUpdated/iconsLogos/smile.svg" alt="happy face">
                </li>
                <li class="prob">
-                 <em class="bold-sol">Solution:</em> Homeless cats get fixed, returned, and recorded
+                 <em class="bold-sol">Solution:</em> Keep users updated with the community.
                 </li>
              </ul>
            <!-- problem and solution group 3 -->
