--- a/project2.html
+++ b/project2.html
@@ -123,7 +123,7 @@
                  </li>
                  <li class="prob">
                    <em class="bold-sol">Solution:</em> Allow users to report homeless cats
-                   sighting to keep track of the population and health status.
+                   sighting to TNR for population control.
                  </li>
                </ul>
                <img class="solscr" src="imagesUpdated/TNRProject/map.png" alt="empty dashboard">
@@ -170,15 +170,15 @@
                    <img class="sad" src="imagesUpdated/iconsLogos/frown.svg" alt="sad face">
                  </li>
                  <li class="prob">
-                   <em class="bold-prob">Problem:</em> Educate the community of homeless cats overpopulation
+                   <em class="bold-prob">Problem:</em> Ineffective of keep track of homeless cats health records.
                  </li>
                  <li>
                     <img class="happy" src="imagesUpdated/iconsLogos/smile.svg" alt="happy face">
                  </li>
                  <li class="prob">
-                   <em class="bold-sol">Solution:</em> Volunteer community to support kittens
+                   <em class="bold-sol">Solution:</em> Built-in database to keep track of homeless cats health records.
                </ul>
-               <img class="solscr" src="imagesUpdated/realTimeSupport.png" alt="dashboard in house massaging system screenshot">
+               <img class="solscr" src="imagesUpdated/TNRProject/database.png" alt="dashboard in house massaging system screenshot">
 
            </section>
           <div class="grid-bg">
