update some images

--- a/project2.html
+++ b/project2.html
@@ -537,8 +537,8 @@
              </section>
             </div>
              <section class="styleGuide">
-                <img src="imagesUpdated/font.png" alt="typeface">
-                <img src="imagesUpdated/palette.png" alt="color">
+                <img src="imagesUpdated/TNRProject/prompt.png" alt="typeface">
+                <img src="imagesUpdated/TNRProject/pink.png" alt="color">
              </section>
                <div class="download-style">
                  <a href="imagesUpdated/virtbox-styleguide.png" download="virtBox style guide">DOWNLOAD STYLE GUIDE</a>
@@ -619,34 +619,40 @@
                 <div class="w3-content w3-display-container">
 
                  <article class="w3-display-container mySlides">
-                     <h6 class="w3-display-top">Laid out navigation menu vs collapsed navigation menu</h6>
+                     <h6 class="w3-display-top">Locating donation receipts</h6>
                       <img src="imagesUpdated/menuPreference.png" alt ="Menu preference">
                         <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
-                          <h4>72% picked option B</h4>
-                            <p>Since they were unable to view what entails under <em class="bold">“categories”</em>,
-                             they  had concerns of having to scroll down if the <em class="bold">“categories”</em> option is expanded.
-                             However, there were only 3 options under <em class="bold">“categories”</em>, which users will not have to worry about this concern.
-                             Thus, I decided to implement option A for the next iteration.</p>
+                          <h4>65% picked option B</h4>
+                            <p>I decided to test this element because while conducting usability test,
+                              participant hesitated when  locating payment information.
+                              I wanted to see how they would like their receipts located.</p>
                         </div>
                  </article>
                  <article class="w3-display-container mySlides">
-                     <h6 class="w3-display-top">One button to add files vs 2 buttons to add files</h6>
+                     <h6 class="w3-display-top">Posting method</h6>
                       <img src="imagesUpdated/addPreference.png" alt="Add preference">
                         <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
-                          <h4>59% of users picked option B</h4>
-                            <p>This test was the hardest. Both options started off very even. Some stated they like the simplicity while
-                              others think it is less confusing to have 2 buttons. I decided to move on with option A to keep the interface clean
-                              and to following the rule of progressive disclosure. If given more time, I would definitely perform more tests.
-                              This is one of those situations were what designers think is best might not be what the users want.</p>
+                          <h4>68% participants picked option B</h4>
+                            <p>I decided to picked option B, however, while double checking with the
+                              Material Guidelines, it was recommended to use floating button with caution
+                              when navigation options is present. Since my navigation tab included words,
+                              I thought it would be crowded with the floating button. Moreover, users are more
+                              likely to keep in touch with events and TNR deals than writing a post. Thus,
+                              I gear the screen’s focus toward posts from organizations than for user to write posts</p>
                         </div>
                  </article>
                  <article class="w3-display-container mySlides">
-                     <h6 class="w3-display-top">Icons vs non-icons</h6>
+                     <h6 class="w3-display-top">Image vs Illustration</h6>
                       <img src="imagesUpdated/iconsPreference.png" alt="Icons preference">
                         <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
-                          <h4>100% users picked option B</h4>
-                            <p>Users stated the icons help them scan quickly through the navigation. I originally skipped the icons to keep things
-                              simple and completely overlooked the important of icons. I decided to use option B to move forward.</p>
+                          <h4>61% picked option B</h4>
+                            <p>The responses between these alternatives were very competitive.
+                              The results proved to be statistically significant.
+                              Option B may be performing better due to random chance alone.
+                              I decided to went with option B. I feel that users can relate more to the
+                              picture rather than Illustration. Especially when it comes to animal welfare.
+                              In real scenarios, I would like
+                              to use real pictures of kittens who had been saved by the community who used the app</p>
                         </div>
                  </article>
                    <button class="w3-button w3-display-left w3-black" onclick="plusDivs(-1)">&#10094;</button>
