update most images

--- a/project2.html
+++ b/project2.html
@@ -668,8 +668,12 @@
              </section>
            </div>
              <section class="v2">
-               <img src="imagesUpdated/beforeVersion2.png" alt="Before 2nd iteration">
-               <img src="imagesUpdated/version2result.png" alt="After 2nd iteration">
+               <img src="imagesUpdated/TNRProject/beforev2Mobile.png" alt="Before 2nd iteration">
+               <img src="imagesUpdated/TNRProject/afterv2Mobile.png" alt="After 2nd iteration">
+             </section>
+             <section class="v2Tab">
+               <img src="imagesUpdated/TNRProject/beforev2Tab.png" alt="Before 2nd iteration">
+               <img src="imagesUpdated/TNRProject/afterv2Tab.png" alt="After 2nd iteration">
              </section>
             <!-- 4.2: 3rd ITERATION -->
            <div class="grid2">
@@ -679,8 +683,12 @@
              </section>
            </div>
              <section class="v3">
-                <img src="imagesUpdated/beforeVersion3.png" alt="Before 3rd iteration">
-                <img src="imagesUpdated/version3Result.png" alt="After 3rd iteration">
+                <img src="imagesUpdated/TNRProject/beforev3Mobile.png" alt="Before 3rd iteration">
+                <img src="imagesUpdated/TNRProject/afterv3Mobile.png" alt="After 3rd iteration">
+             </section>
+             <section class="v3Tab">
+                <img src="imagesUpdated/TNRProject/beforev3Tab.png" alt="Before 3rd iteration">
+                <img src="imagesUpdated/TNRProject/afterv3Tab.png" alt="After 3rd iteration">
              </section>
          <div class="grid2">
            <!-- 4.3: USABILITY TESTS ROUND 2 -->
@@ -753,7 +761,7 @@
                 I wanted to develop. For example, I wanted to have a social feature
                 to connect with local volunteers and allow users to keep updates
                 from fundraising events, training, low-cost clinics, etc.
-                I studied FaceBook, Instagram, Pawpular, PSCPA, Twitter, LinkedIn.
+                I studied FaceBook, Instagram, Pawpular, ASPCA, Twitter, LinkedIn.
                 This helped me learn basic social media structures, what they
                 all have in commons, why are they different? What are their differences?
                 How their users interact with the platform?</p>
