--- a/project2.html
+++ b/project2.html
@@ -263,19 +263,19 @@
                        <li>
                          <div class="data-content">
                           <h4>79%</h4>
-                           <p>participants currently use cloud storage</p>
+                           <p>had come across a stray before</p>
                          </div>
                        </li>
                        <li>
                          <div class="data-content">
                           <h4>75%</h4>
-                           <p>use cloud storage for personal</p>
+                           <p>of those sighted strays are cats</p>
                          </div>
                        </li>
                        <li>
                          <div class="data-content last">
                           <h4>53%</h4>
-                           <p>use provider for convenience</p>
+                           <p>chose to do nothing</p>
                          </div>
                        </li>
                      </ul>
@@ -283,19 +283,19 @@
                        <li>
                          <div class="data-content">
                           <h4>59%</h4>
-                           <p>are under 35</p>
+                           <p>decided to take actions when face a stray</p>
                          </div>
                        </li>
                        <li>
                          <div class="data-content">
                           <h4>56%</h4>
-                           <p>use cloud storage on desktop</p>
+                           <p>chose to feed it and care for the animal when turned away</p>
                          </div>
                        </li>
                        <li>
                          <div class="data-content last">
                           <h4>None</h4>
-                           <p>use Google Drive</p>
+                           <p>have heard of stray animals app</p>
                          </div>
                        </li>
                      </ul>
@@ -459,7 +459,7 @@
              </section>
            <div class="grid4">
             <p class="grid4-content">I created wireframes to connect the concepts, user flows, and branding together on paper,
-              then digitized them using Figma. </p>
+              then digitized them using <em class="bold">Figma</em>. </p>
            </div>
              <div class="mockupSketches"></div> <!-- need background image of sketches in css -->
              <div class="digitalSketches"></div> <!-- need background image of mockups in css -->
@@ -470,6 +470,7 @@
                  <p>I then used these wireframes to performed usability tests using Maze.
                    There were 16 participants.</p>
                    <h6>Users were asked to perform the followings:</h6>
+                   <br>
                        <p><em class="bold">Task 1: </em> Go through the tutorial and report a stray </em>
                        <p><em class="bold">Task 2: </em> Create an account </p>
                        <p><em class="bold">Task 3: </em> Set up recurring payment </p>
@@ -570,12 +571,12 @@
            <!-- display slideshow in mobile -->
              <section class="slideShow">
                 <ul class="slides">
-                  <li class="slides-bg"><h4>Locating donation receipts</h4></li>
+                  <h4 class="slides-bg">Locating donation receipts</h4>
                   <li>
-                    <img src="imagesUpdated/menuPreferenceA.png" alt="Menu preference A">
+                    <img src="imagesUpdated/TNRProject/receiptOpA.png" alt="Menu preference A">
                   </li>
                   <li>
-                    <img src="imagesUpdated/menuPreferenceB.png" alt="Menu preference B">
+                    <img src="imagesUpdated/TNRProject/receiptOpB.png" alt="Menu preference B">
                     <h5>65% picked option B</h5>
                       <p>I decided to test this element because while conducting usability test,
                         participant hesitated when  locating payment information.
@@ -583,10 +584,10 @@
                   </li>
                   <div class="top-g2"><li class="slides-bg"><h4>Posting method</h4></li></div>
                   <li>
-                    <img src="imagesUpdated/addPreferenceA.png" alt="Add preference A">
+                    <img src="imagesUpdated/TNRProject/postOpA.png" alt="Add preference A">
                   </li>
                   <li class="bottom-g2">
-                    <img src="imagesUpdated/addPreferenceB.png" alt="Add preference B">
+                    <img src="imagesUpdated/TNRProject/postOpB.png" alt="Add preference B">
                     <h5>68% participants picked option B</h5>
                       <p>I decided to picked option B, however, while double checking with the
                         Material Guidelines, it was recommended to use floating button with caution
@@ -597,10 +598,10 @@
                   </li>
                   <li class="slides-bg"><h4>Image vs Illustration</h4></li>
                   <li>
-                    <img src="imagesUpdated/iconsPreferenceA.png" alt="Icons preference A">
+                    <img src="imagesUpdated/TNRProject/pictureOpA.png" alt="Icons preference A">
                   </li>
                   <li>
-                    <img src="imagesUpdated/iconsPreferenceB.png" alt="Icons preference B">
+                    <img src="imagesUpdated/TNRProject/pictureOpB.png" alt="Icons preference B">
                     <h5>61% picked option B</h5>
                       <p>The responses between these alternatives were very competitive.
                         The results proved to be statistically significant.
@@ -620,7 +621,7 @@
 
                  <article class="w3-display-container mySlides">
                      <h6 class="w3-display-top">Locating donation receipts</h6>
-                      <img src="imagesUpdated/menuPreference.png" alt ="Menu preference">
+                      <img src="imagesUpdated/TNRProject/preference1Slide.png" alt ="Preference 1">
                         <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
                           <h4>65% picked option B</h4>
                             <p>I decided to test this element because while conducting usability test,
@@ -630,7 +631,7 @@
                  </article>
                  <article class="w3-display-container mySlides">
                      <h6 class="w3-display-top">Posting method</h6>
-                      <img src="imagesUpdated/addPreference.png" alt="Add preference">
+                      <img src="imagesUpdated/TNRProject/preference2Slide.png" alt="Add preference">
                         <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
                           <h4>68% participants picked option B</h4>
                             <p>I decided to picked option B, however, while double checking with the
@@ -643,7 +644,7 @@
                  </article>
                  <article class="w3-display-container mySlides">
                      <h6 class="w3-display-top">Image vs Illustration</h6>
-                      <img src="imagesUpdated/iconsPreference.png" alt="Icons preference">
+                      <img src="imagesUpdated/TNRProject/preference3Slide.png" alt="Icons preference">
                         <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
                           <h4>61% picked option B</h4>
                             <p>The responses between these alternatives were very competitive.
@@ -671,25 +672,12 @@
                <img src="imagesUpdated/TNRProject/beforev2Mobile.png" alt="Before 2nd iteration">
                <img src="imagesUpdated/TNRProject/afterv2Mobile.png" alt="After 2nd iteration">
              </section>
+
              <section class="v2Tab">
                <img src="imagesUpdated/TNRProject/beforev2Tab.png" alt="Before 2nd iteration">
                <img src="imagesUpdated/TNRProject/afterv2Tab.png" alt="After 2nd iteration">
              </section>
-            <!-- 4.2: 3rd ITERATION -->
-           <div class="grid2">
-             <section class="thirdIteration">
-              <h3>3RD ITERATION</h3>
-               <p>Round 3 of iteration focus on visual improvements for the homepage.</p>
-             </section>
-           </div>
-             <section class="v3">
-                <img src="imagesUpdated/TNRProject/beforev3Mobile.png" alt="Before 3rd iteration">
-                <img src="imagesUpdated/TNRProject/afterv3Mobile.png" alt="After 3rd iteration">
-             </section>
-             <section class="v3Tab">
-                <img src="imagesUpdated/TNRProject/beforev3Tab.png" alt="Before 3rd iteration">
-                <img src="imagesUpdated/TNRProject/afterv3Tab.png" alt="After 3rd iteration">
-             </section>
+
          <div class="grid2">
            <!-- 4.3: USABILITY TESTS ROUND 2 -->
            <section class="usabilityTests2">
@@ -715,24 +703,37 @@
                 </div>
            </section>
          </div>
+
+         <!-- 4.2: 3rd ITERATION -->
+        <div class="grid2">
+          <section class="thirdIteration">
+           <h3>3RD ITERATION</h3>
+            <p>Round 3 of iteration focus on visual improvements for the homepage.</p>
+          </section>
+        </div>
+          <section class="v3">
+             <img src="imagesUpdated/TNRProject/beforev3Mobile.png" alt="Before 3rd iteration">
+             <img src="imagesUpdated/TNRProject/afterv3Mobile.png" alt="After 3rd iteration">
+          </section>
+
+          <section class="v3Tab">
+             <img src="imagesUpdated/TNRProject/beforev3Tab.png" alt="Before 3rd iteration">
+             <img src="imagesUpdated/TNRProject/afterv3Tab.png" alt="After 3rd iteration">
+          </section>
        <div class="grid-bg">
         <div class="grid2">
          <!-- FINISHING TOUCHES -->
          <section class="final-title">
              <h3>FINISHING TOUCHES: A USER PERSPECTIVE</h3>
         </section>
-         <section class="final">
-              <p>This iteration utilized the semi-final product with improvements made based on the feedback from the usability tests.
-                   Most edits were made by adding colors to sections to make information stand out and easy to read.
-                   Others were spell check and alignment check.</p>
-         </section>
+
         </div>
          <section class="finish">
-            <img class="finish1" src="imagesUpdated/beforeFinal.png" alt="Before Final">
-            <img class="finish2" src="imagesUpdated/finalResult.png" alt="After Final">
+            <img class="finish1" src="imagesUpdated/TNRProject/beforeFinal.png" alt="Before Final">
+            <img class="finish2" src="imagesUpdated/TNRProject/afterFinal.png" alt="After Final">
          </section>
          <section class="added">
-            <img src="imagesUpdated/category.png" alt="Added options">
+            <img src="imagesUpdated/TNRProject/tutorial.png" alt="Added options">
          </section>
        </div>
        <div class="grid2">
