--- a/project2.html
+++ b/project2.html
@@ -383,7 +383,7 @@
                   <!-- PERSONA 2 -->
                   <article class="persona2">
                     <div class="avatar"><img class="avatar2" src="imagesUpdated/TNRProject/sharon.jpg" alt="Hannah A"></div>
-                     <h4 class="name">Hannah A.</h4>
+                     <h4 class="name">Sharon B.</h4>
                       <p class="quote">“I prefer to work as alone rather than working with an organization”</p>
                        <ul>
                           <li>A DIY rescuers to find homes for friendly felines while fixing and feeding local ferals</li>
@@ -395,7 +395,7 @@
                   <!-- PERSONA 3 -->
                   <article class="persona3">
                     <div class="avatar"><img class="avatar3" src="imagesUpdated/TNRProject/kevin.jpg" alt="Sean"></div>
-                      <h4 class="name">Sean M.</h4>
+                      <h4 class="name">Kevin S.</h4>
                        <p class="quote">“I’d like a platform to connect with others so I don’t feel alone”</p>
                         <ul>
                            <li>Currently feeding a colony of 12 cats</li>
